--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
+  "name": "jared",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export -o _static"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "axios": "^0.24.0",
+    "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-image-gallery": "^1.2.7",
-    "styled-components": "^5.3.3"
+    "react-gtm-module": "^2.0.11"
   },
   "devDependencies": {
-    "@zeit/next-css": "^1.0.1"
+    "eslint": "8.4.1",
+    "eslint-config-next": "12.0.7"
   }
 }
