--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "jared",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,14 +7,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "next": "12.0.7",
+    "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-gtm-module": "^2.0.11"
+    "react-image-gallery": "^1.2.7",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "@zeit/next-css": "^1.0.1"
   }
 }
