--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-image-gallery": "^1.2.7",
